kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app-container
          # image: ttl.sh/codeshareeshivaamm:5h
          image: ttl.sh/codeshareeshivvaam:6h
          ports:
            - containerPort: 3000
