kubernetes/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: my-app-service
# spec:
#   selector:
#     app: my-app
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 3000
#   type: NodePort


apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP  # Alternatively, NodePort if required
